--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+}
+
+androidExtensions {
+    experimental = true
 }
 
 android {
@@ -12,6 +18,7 @@ android {
         targetSdk 31
         versionCode 1
         versionName "1.0"
+        multiDexEnabled=true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -40,4 +47,43 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // gson
+    implementation("com.squareup.okhttp3:logging-interceptor:4.2.0")
+
+    // kotlin coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
+    // viewmodel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+    // retrofit moshi
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
+    // room
+    implementation "androidx.room:room-runtime:2.3.0"
+    implementation "androidx.room:room-ktx:2.3.0"
+    kapt "androidx.room:room-compiler:2.3.0"
+    androidTestImplementation "androidx.room:room-testing:2.3.0"
+    annotationProcessor "androidx.room:room-compiler:2.3.0"
+
+    // koin
+    implementation "org.koin:koin-android:2.2.0"
+    implementation "org.koin:koin-android-viewmodel:2.2.0"
+    implementation "org.koin:koin-androidx-workmanager:2.2.0"
+
+    // multidex
+    implementation 'com.android.support:multidex:1.0.3'
+
+    // other
+    implementation "androidx.annotation:annotation:1.3.0"
+    implementation "androidx.work:work-runtime-ktx:2.4.0"
+
+
 }
